minigu/gql/parser/tests/snapshots/utility/explain_call.snap
---
source: minigu/gql/parser/tests/parser_test.rs
---
Ok:
  - activity:
      - Transaction:
          start: ~
          procedure:
            - at: ~
              binding_variable_defs: []
              statement:
                - Utility:
                    Explain:
                      statement:
                        - Catalog:
                            - - Call:
                                  optional: false
                                  procedure:
                                    - Named:
                                        name:
                                          - Ref:
                                              schema: ~
                                              objects:
                                                - - echo
                                                  - start: 13
                                                    end: 17
                                          - start: 13
                                            end: 17
                                        args:
                                          - - Value:
                                                Literal:
                                                  String:
                                                    kind: Char
                                                    literal: hello world
                                            - start: 18
                                              end: 31
                                        yield_clause: ~
                                    - start: 13
                                      end: 32
                              - start: 8
                                end: 32
                        - start: 8
                          end: 32
                - start: 0
                  end: 32
              next_statements: []
            - start: 0
              end: 32
          end: ~
      - start: 0
        end: 32
    session_close: false
  - start: 0
    end: 32
