minigu/gql/parser/tests/snapshots/utility/explain_logical_match.snap
---
source: minigu/gql/parser/tests/parser_test.rs
---
Ok:
  - activity:
      - Transaction:
          start: ~
          procedure:
            - at: ~
              binding_variable_defs: []
              statement:
                - Utility:
                    Explain:
                      statement:
                        - Query:
                            Primary:
                              Ambient:
                                Parts:
                                  parts:
                                    - - Match:
                                          Simple:
                                            - pattern:
                                                - match_mode: ~
                                                  patterns:
                                                    - - variable: ~
                                                        prefix: ~
                                                        expr:
                                                          - Concat:
                                                              - - Pattern:
                                                                    Node:
                                                                      variable:
                                                                        - n
                                                                        - start: 14
                                                                          end: 15
                                                                      label: ~
                                                                      predicate: ~
                                                                - start: 13
                                                                  end: 16
                                                          - start: 13
                                                            end: 16
                                                      - start: 13
                                                        end: 16
                                                  keep: ~
                                                  where_clause: ~
                                                - start: 13
                                                  end: 16
                                              yield_clause: []
                                            - start: 13
                                              end: 16
                                      - start: 8
                                        end: 16
                                  result:
                                    - Return:
                                        statement:
                                          - quantifier: ~
                                            items:
                                              - Items:
                                                  - - value:
                                                        - Variable: n
                                                        - start: 24
                                                          end: 25
                                                      alias: ~
                                                    - start: 24
                                                      end: 25
                                              - start: 24
                                                end: 25
                                            group_by: ~
                                          - start: 17
                                            end: 25
                                        order_by: ~
                                    - start: 17
                                      end: 25
                        - start: 8
                          end: 25
                - start: 0
                  end: 25
              next_statements: []
            - start: 0
              end: 25
          end: ~
      - start: 0
        end: 25
    session_close: false
  - start: 0
    end: 25
