minigu/gql/parser/tests/snapshots/utility/explain_sort.snap
---
source: minigu/gql/parser/tests/parser_test.rs
---
Ok:
  - activity:
      - Transaction:
          start: ~
          procedure:
            - at: ~
              binding_variable_defs: []
              statement:
                - Utility:
                    Explain:
                      statement:
                        - Query:
                            Primary:
                              Ambient:
                                Parts:
                                  parts:
                                    - - Match:
                                          Simple:
                                            - pattern:
                                                - match_mode: ~
                                                  patterns:
                                                    - - variable: ~
                                                        prefix: ~
                                                        expr:
                                                          - Concat:
                                                              - - Pattern:
                                                                    Node:
                                                                      variable:
                                                                        - n
                                                                        - start: 15
                                                                          end: 16
                                                                      label: ~
                                                                      predicate: ~
                                                                - start: 14
                                                                  end: 17
                                                          - start: 14
                                                            end: 17
                                                      - start: 14
                                                        end: 17
                                                  keep: ~
                                                  where_clause: ~
                                                - start: 14
                                                  end: 17
                                              yield_clause: []
                                            - start: 14
                                              end: 17
                                      - start: 8
                                        end: 17
                                  result:
                                    - Return:
                                        statement:
                                          - quantifier: ~
                                            items:
                                              - Items:
                                                  - - value:
                                                        - Variable: n
                                                        - start: 25
                                                          end: 26
                                                      alias: ~
                                                    - start: 25
                                                      end: 26
                                              - start: 25
                                                end: 26
                                            group_by: ~
                                          - start: 18
                                            end: 26
                                        order_by:
                                          - order_by:
                                              - - key:
                                                    - Property:
                                                        source:
                                                          - Variable: n
                                                          - start: 36
                                                            end: 37
                                                        trailing_names:
                                                          - - age
                                                            - start: 38
                                                              end: 41
                                                    - start: 36
                                                      end: 41
                                                  ordering: ~
                                                  null_ordering: ~
                                                - start: 36
                                                  end: 41
                                            offset: ~
                                            limit: ~
                                          - start: 27
                                            end: 41
                                    - start: 18
                                      end: 41
                        - start: 8
                          end: 41
                - start: 0
                  end: 41
              next_statements: []
            - start: 0
              end: 41
          end: ~
      - start: 0
        end: 41
    session_close: false
  - start: 0
    end: 41
