minigu/gql/parser/tests/snapshots/utility/explain_vector_index_scan.snap
---
source: minigu/gql/parser/tests/parser_test.rs
---
Err:
  InvalidToken:
    input: "MATCH (a:Articles)\nRETURN VECTOR_DISTANCE([0.1, 0.2, 0.3], a.article_vector, L2) AS distance\nORDER BY distance\nLIMIT 10;"
    span:
      start: 119
      end: 120
    position:
      - 4
      - 9
    kind: InvalidToken
